# openGL-Clone

./: .gitmodules  CMakeLists.txt  README.md
include/rendering/: Mesh.h  Model.h  Shader.h  controls.h  util.h
modules/: CMakeLists.txt
modules/glad/: CMakeLists.txt
modules/stb/: CMakeLists.txt
resources/shaders/: shader0.frag  shader0.vert
src/: main.cpp
src/rendering/: Mesh.cpp  Model.cpp  Shader.cpp  controls.cpp  util.cpp
